zkvm: sp1 primitives added

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ exclude = [".github/"]
 
 [workspace]
 members = [
+    "crates/alpen/zkvm-primitives",
     "bin/reth-bench/",
     "bin/reth/",
     "crates/blockchain-tree/",
