--- a/bin/reth/Cargo.toml
+++ b/bin/reth/Cargo.toml
@@ -70,6 +70,7 @@ reth-engine-util.workspace = true
 reth-prune.workspace = true
 reth-stages-api.workspace = true
 reth-optimism-cli = { workspace = true, optional = true }
+reth-alpen-utils = { workspace = true, optional = true }
 
 # crypto
 alloy-rlp.workspace = true
@@ -148,6 +149,9 @@ optimism = [
 # no-op feature flag for switching between the `optimism` and default functionality in CI matrices
 ethereum = []
 
+alpen = ["reth-alpen-utils"]
+
+
 [[bin]]
 name = "reth"
 path = "src/main.rs"
@@ -156,3 +160,8 @@ path = "src/main.rs"
 name = "op-reth"
 path = "src/optimism.rs"
 required-features = ["optimism"]
+
+[[bin]]
+name = "alpen-reth"
+path = "src/alpen.rs"
+required-features = ["alpen"]
