--- a/crates/alpen/utils/Cargo.toml
+++ b/crates/alpen/utils/Cargo.toml
@@ -22,6 +22,11 @@ reth-node-api.workspace = true
 reth-primitives.workspace = true
 reth-provider.workspace = true
 reth-revm.workspace = true
+reth-rpc-types-compat.workspace = true
+reth-rpc-types.workspace = true
+zkvm-primitives.workspace = true
+hashbrown = "0.14.3"
+bincode = "1.3.3"
 
 # common
 eyre.workspace = true
@@ -33,6 +38,7 @@ tokio = { workspace = true, features = ["macros", "sync"] }
 bytes.workspace = true
 modular-bitfield.workspace = true
 serde.workspace = true
+serde_json.workspace = true
 
 
 [dev-dependencies]
