--- a/crates/alpen/zkvm-primitives/Cargo.toml
+++ b/crates/alpen/zkvm-primitives/Cargo.toml
@@ -4,11 +4,17 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-alloy-rlp.workspace = true
+# alloy-rlp.workspace = true
+alloy-rlp = { version = "0.3.4", default-features = false }
 alloy-rlp-derive = { version = "0.3", default-features = false }
+alloy-primitives = { version = "0.7.2", default-features = false, features = [
+    "rlp",
+    "serde",
+    "std",
+] }
 alloy-rpc-types.workspace = true
 anyhow = "1.0.0"
-alloy-primitives.workspace = true
+# alloy-primitives.workspace = true
 hashbrown = "0.14.3"
 reth-primitives = { path = "../../primitives", default-features = false, features = [
     "std",
