--- a/crates/alpen/utils/Cargo.toml
+++ b/crates/alpen/utils/Cargo.toml
@@ -28,6 +28,11 @@ zkvm-primitives.workspace = true
 hashbrown = "0.14.3"
 bincode = "1.3.3"
 
+alloy-rpc-types = { version = "0.1", default-features = false, features = [
+    "eth",
+] }
+
+
 # common
 eyre.workspace = true
 tokio = { workspace = true, features = ["macros", "sync"] }
