--- a/crates/alpen/zkvm-primitives/Cargo.toml
+++ b/crates/alpen/zkvm-primitives/Cargo.toml
@@ -21,6 +21,8 @@ reth-primitives = { path = "../../primitives", default-features = false, feature
 alloy-rpc-types = { version = "0.1", default-features = false, features = [
     "eth",
 ] }
+alloy-eips.workspace = true
+reth-trie-common.workspace = true
 
 revm = { version = "12.1.0", default-features = false }
 # reth-revm = { path = "../../revm", default-features = false, features = [
