--- a/crates/alpen/utils/Cargo.toml
+++ b/crates/alpen/utils/Cargo.toml
@@ -22,6 +22,13 @@ reth-node-api.workspace = true
 reth-primitives.workspace = true
 reth-provider.workspace = true
 reth-revm.workspace = true
+reth-rpc-types-compat.workspace = true
+zkvm-primitives.workspace = true
+
+alloy-rpc-types = { version = "0.1", default-features = false, features = [
+    "eth",
+] }
+
 
 # common
 eyre.workspace = true
@@ -33,6 +40,7 @@ tokio = { workspace = true, features = ["macros", "sync"] }
 bytes.workspace = true
 modular-bitfield.workspace = true
 serde.workspace = true
+serde_json.workspace = true
 
 
 [dev-dependencies]
