--- a/crates/alpen/utils/Cargo.toml
+++ b/crates/alpen/utils/Cargo.toml
@@ -41,6 +41,7 @@ bytes.workspace = true
 modular-bitfield.workspace = true
 serde.workspace = true
 serde_json.workspace = true
+bincode = "1.3"
 
 
 [dev-dependencies]
